--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -14,28 +14,33 @@ html, body {
 
 :root {
   --background-color: rgb(245, 237, 240); 
-  --alternate-color: rgb(212, 188, 198); 
-  --dark-color: rgb(74, 32, 48); 
-  --light-color: rgb(255, 255, 255); 
+  --alternate-color: rgba(239, 209, 209, 0.8);
+  --dark-color: rgb(48, 23, 18);  
+  --light-color: rgba(237, 237, 233, 0.9)
 }
 
 .full_page {
   width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: 'Cormorant Garamond', serif;
-  background-color: var(--background-color); 
-  background-size: 40px 40px; 
+  background-image: url('./src/assets/background2.png'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat;
   color: var(--dark-color);
 }
+
 
 /* ----------------------------------MAIN SECTION ----------------------------------------------*/
 .main_section {
   width: 100%;
   min-height: 90vh; 
   height: auto;
-  margin-top: 0;
+  margin-top: 4rem;
+  margin-left: 8rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -125,33 +130,7 @@ html, body {
   transform: translateY(-1px);
 }
 
-@media (max-width: 768px) {
-  .main_container {
-    margin-top: 0; 
-    flex-direction: column;
-    text-align: center;
-    min-height: auto;
-  }
 
-  .main_content {
-    padding-left: 0;
-    text-align: center;
-    align-items: center;
-    margin-top: 3rem;
-  }
-
-  .main_image img {
-    width: 70%;
-  }
-
-  .main_content h1 {
-    font-size: 3.5rem;
-  }
-
-  .main_content h2 {
-    font-size: 2rem;
-  }
-}
 
 /* ------------------------PROJECTS SECTION ------------------------------------------*/
 .projects_section {
@@ -160,7 +139,8 @@ html, body {
   max-width: 1200px;
   margin: 70px auto 80px auto;
   padding: 3rem 4rem; 
-  background-color: var(--alternate-color); 
+  background-color: var(--light-color);
+
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(74, 32, 48, 0.1);
   border: none; 
@@ -200,7 +180,7 @@ html, body {
 }
 
 .project_card {
-  background-color: var(--light-color); 
+  background-color: var(--alternate-color); 
   border: none; 
   border-radius: 10px; 
   padding: 2.5rem 1.5rem; 
@@ -441,7 +421,73 @@ html, body {
 }
 
 
+
+/**-------------------------MOBILE--------------------------------------------*/
+
+
 @media (max-width: 768px) {
+
+  .main_section {
+  margin-top: 0rem;
+  margin-left: 0rem;
+  }
+
+  .main_container {
+    margin-top: 0;
+    margin-left:0; 
+    flex-direction: column;
+    text-align: center;
+    min-height: auto;
+  }
+
+  .main_content {
+    padding-left: 0;
+    margin-top: 0;
+    margin-left: 0; 
+    text-align: center;
+    align-items: center;
+  }
+
+  .main_image img {
+    width: 70%;
+  }
+
+  .main_content h1 {
+    font-size: 3.5rem;
+  }
+
+  .main_content h2 {
+    font-size: 2rem;
+  }
+
+  .projects_section,
+  .skills_section {
+    width: 100%;
+    padding: 2rem 1rem;
+    margin: 50px auto;
+  }
+
+
+  .projects_grid {
+    grid-template-columns: 1fr; 
+    gap: 2rem;
+  }
+
+  .project_card {
+    padding: 1.5rem;
+  }
+
+  .projects_section .section_title,
+  .skills_section .section_title {
+    font-size: 2.2rem;
+  }
+
+  .project_card h3 {
+    font-size: 1.8rem;
+  }
+
+
+
   .contact_section {
     padding: 3rem 1.5rem;
   }
@@ -450,3 +496,5 @@ html, body {
     width: 100%;
   }
 }
+
+
