--- a/src/components/header.css
+++ b/src/components/header.css
@@ -11,21 +11,11 @@ html, body {
 
 :root {
   --background-color: rgb(245, 237, 240);
-  --alternate-color: rgb(212, 188, 198);
-  --dark-color: rgb(74, 32, 48);
+  --alternate-color: rgba(239, 209, 209, 0.9);
+  --dark-color:  rgb(48, 23, 18); 
   --light-color: rgb(255, 255, 255);
 }
 
-.full_page {
-  width: 100vw;
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  font-family: 'Cormorant Garamond', serif;
-  background-color: var(--background-color);
-  background-size: 40px 40px;
-  color: var(--dark-color);
-}
 
 /* ---------------------------------- HEADER SECTION ----------------------------------------------*/
 .header {
@@ -34,7 +24,7 @@ html, body {
   left: 50%;
   transform: translateX(-50%);
   width: calc(100% - 40px);
-  background-color: var(--background-color);
+  background-color: var(--light-color);
   height: 65px;
   display: flex;
   justify-content: center;
