--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -6,8 +6,22 @@
   padding: 1rem 4rem;
   text-align: center;
   box-sizing: border-box;
-  color: rgb(126, 53, 80);
+  color:  rgb(48, 23, 18); 
   font-family: 'Playfair Display', serif;
   z-index: 10;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
+
+.projects_page a {
+  text-decoration: none;  
+  color: inherit;   
+  transition: none;  
+}
+
+.projects_page a:hover,
+.projects_page a:focus,
+.projects_page a:active {
+  text-decoration: none;  
+  color: inherit; 
+}
+
