--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,13 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;600&family=Homemade+Apple&display=swap');
 
-* {
-  box-sizing: border-box;
-}
 
-html, body {
-  margin: 0;
-  padding: 0;
-}
 
 :root {
   --background-color: rgb(245, 237, 240);
@@ -39,7 +32,7 @@ html, body {
 .header_container {
   width: 100%;
   max-width: 1200px;
-  padding: 1rem 2rem;
+  padding: 1rem 0.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -73,9 +66,7 @@ html, body {
   transition: width 0.4s ease-out;
 }
 
-.nav_link:hover {
-  color: var(--light-color);
-}
+
 
 .nav_link:hover::after {
   width: 100%;
@@ -87,14 +78,15 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 0.8rem;
+  gap: 0.5rem;
+  margin: 0rem 1rem;
 }
 
 .resume_btn {
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--alternate-color);
+  color: var(--dark-color);
   font-family: 'Cormorant Garamond', serif;
-  font-weight: 600;
+  font-weight: 800;
   padding: 0.7rem 1.8rem;
   border-radius: 30px;
   text-decoration: none;
@@ -102,22 +94,23 @@ html, body {
   text-transform: uppercase;
   letter-spacing: 1.5px;
   border: 3px solid transparent;
+  margin: 0rem 0rem 0rem 0.7rem;
 }
 
 .resume_btn:hover {
-  background-color: var(--background-color);
+  background-color: var(--alternate-color);
   color: var(--dark-color);
-  border: 3px solid var(--dark-color);
+  border: 1.5x solid var(--dark-color);
   box-shadow: 0 6px 15px rgba(74, 32, 48, 0.2);
 }
 
 .icon_btn {
-  background-color: var(--dark-color);
-  color: var(--light-color);
+  background-color: var(--alternate-color);
+  color: var(--dark-color);
   font-size: 1.4rem;
   padding: 0.7rem;
   border-radius: 50%;
-  margin-left: 0.8rem;
+  margin-left: 0.5rem;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -127,9 +120,9 @@ html, body {
 }
 
 .icon_btn:hover {
-  background-color: var(--background-color);
+  background-color: var(--alternate-color);
   color: var(--dark-color);
-  border: 3px solid var(--dark-color);
+  border: 1.5x solid var(--dark-color);
   box-shadow: 0 6px 15px rgba(74, 32, 48, 0.2);
 }
 
