--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -25,7 +25,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Cormorant Garamond', serif;
-  background-image: url('/background2.png'); 
+  background-image: url('/back.jpg'); 
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat;
