--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -26,7 +26,7 @@ html, body {
   --font-fun: 'DM Sans', sans-serif;   
 }
 
-/*------------------------Cursor ------------------------------------------*/
+/*------------------------Cursor ------------------------------------------
 
 .cursor_glow {
   position: fixed;
@@ -44,6 +44,8 @@ html, body {
   z-index: 2000;
   mix-blend-mode: multiply;
 }
+
+*/
 
 /*------------------------Cursor ------------------------------------------*/
 
