--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -47,7 +47,7 @@ html, body {
 
 */
 
-/*------------------------Cursor ------------------------------------------*/
+/*------------------------ Full page ------------------------------------------*/
 
 
 .full_page {
